--- a/_layouts/widgets.html
+++ b/_layouts/widgets.html
@@ -18,12 +18,11 @@
             {{page.description}}
           </div>
         </div>
-        <div id="adv_btn" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
-        <div id="basic_btn" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
-
         <div class="wrapper">
-          <h2>Attributes</h2>
-          <div class="attributes">
+          <div class="attributes" data-ur-set="tabs">
+            <div id="basic_btn" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
+            <div id="adv_btn" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
+            <h2 class="attr_title">Attributes</h2>
             <div class="basic_tab" data-ur-tabs-component="content" data-ur-tab-id="basicpage" data-ur-state="enabled">
               <dl>
                 {% for i in page.basic_tab %}
