--- a/stylesheets/scss/_base.scss
+++ b/stylesheets/scss/_base.scss
@@ -116,7 +116,7 @@ border-radius: 5px;
   width: 190px; height: 30px;
   margin: auto; margin-top: 15px;  padding-top: 10px;
   color: rgb(50,50,50); font-size: 18px; font-family: Rockwell; text-align: center;
-  background: #FFD700;
+  background: $color2;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
@@ -152,7 +152,7 @@ border-radius: 5px;
   float: left;
   margin: auto; padding-top: 10px;
   color: rgb(50,50,50); font-size: 18px; font-family: Rockwell; text-align: center;
-  background: #FFD700;
+  background: $color2;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
@@ -166,7 +166,7 @@ border-radius: 5px;
   float: right;
   margin: auto; padding-top: 10px;
   color: rgb(50,50,50); font-size: 18px; font-family: Rockwell; text-align: center;
-  background: #FFD700;
+  background: $color2;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
@@ -206,7 +206,7 @@ border-radius: 5px;
   color: rgb(50,50,50); font-size: 18px; font-family: Rockwell; text-align: center; }
 
 *[data-ur-select-list-component="content"] [data-ur-state="enabled"] {
-  background: #FFD700;
+  background: $color2;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
