--- a/stylesheets/scss/_footer.scss
+++ b/stylesheets/scss/_footer.scss
@@ -1,7 +1,7 @@
 /* Footer */
 #footer {
   @include box-shadow(rgba(black, 0.3) 0 15px 15px -5px inset);
-  background: #ffd700;
+  background: $color2;
   border-top: 1px solid black;
   color: black;
   font-size: 12px;
