--- a/stylesheets/scss/_lib.scss
+++ b/stylesheets/scss/_lib.scss
@@ -3,7 +3,7 @@ $text_size: 14px;
 $h_space: 10px;
 
 $color1: #323232; // dark gray
-$color2: #ffd700; // gold
+$color2: #A8BB19; // gold
 $color3: #eee; // gray-ish white
 $color4: #9C9FA8; // blue-ish gray
 
