--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,14 +3,14 @@
   {% capture tmp %}
   <a href="/" id="uraniumlogo" {% if page.home_selected %}class="selected"{% endif %}></a>
   <div class='menu_widget'>
-  	<a href="/widget_list.html" {% if page.widget_selected %}class="selected"{% endif %}>Widgets</a>
+  	<a href="/interaction_list.html" {% if page.interaction_selected %}class="selected"{% endif %}>Interactions</a>
   	<ul>
-  		<li><a href="/widgets/carousel.html">Carousel</a></li>
-  		<li><a href="/widgets/input_clear.html">Input Clear</a></li>
-  		<li><a href="/widgets/geocode.html">Geolocation</a></li>
-  		<li><a href="/widgets/tabs.html">Tabs</a></li>
-  		<li><a href="/widgets/toggler.html">Toggler</a></li>
-  		<li><a href="/widgets/zoom.html">Zoom</a></li>
+  		<li><a href="/interactions/carousel.html">Carousel</a></li>
+  		<li><a href="/interactions/input_clear.html">Input Clear</a></li>
+  		<li><a href="/interactions/geocode.html">Geolocation</a></li>
+  		<li><a href="/interactions/tabs.html">Tabs</a></li>
+  		<li><a href="/interactions/toggler.html">Toggler</a></li>
+  		<li><a href="/interactions/zoom.html">Zoom</a></li>
   	</ul>
   </div>
   <a href="/about.html" {% if page.about_selected %}class="selected"{% endif %}>About</a>
