--- a/stylesheets/scss/main.scss
+++ b/stylesheets/scss/main.scss
@@ -20,6 +20,9 @@
 @import "widget_list";
 @import "widget";
 
+@import "interaction_list";
+@import "interaction";
+
 @import "carousel";
 @import "geocode";
 @import "map";
